Readded sips (fix is working); made scroll bar always visible even when there is nothing to scroll so content doesn shift to the side when filtering.

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
 	align-items: start; /* chrome fix */
 	height: 1%; /* only solution i could come up with for another iOS fix */
 	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #title {
